--- a/LoremIpsum.html
+++ b/LoremIpsum.html
@@ -30,7 +30,7 @@
 <p>
     Curabitur mattis ultricies odio, in viverra ante consectetur vel. Mauris imperdiet orci vitae faucibus suscipit.
     Pellentesque vitae augue quis est rutrum placerat vestibulum ac tellus. Fusce finibus vel nibh nec rhoncus. Donec
-    accumsan at lacus porta ullamcorper. Vivamus mattis viverra lectus. Nam luctus lectus sit amet aliquam blandit.
+    accumsan at lacus porta ullamcorper. Vivamus mattis lectus. Nam luctus lectus sit amet aliquam blandit.
     Suspendisse ut nibh sed augue ullamcorper sodales in id leo. Sed interdum, quam at suscipit accumsan, elit urna
     commodo felis, eget rutrum turpis orci ac tortor. Quisque quis nisl blandit, elementum sapien ac, vehicula tellus.
     Vivamus pellentesque, leo et dignissim molestie, nisl orci facilisis risus, ac dapibus magna nisl nec diam. Mauris
