some new stuff!!!

--- a/LoremIpsum.html
+++ b/LoremIpsum.html
@@ -1,6 +1,6 @@
 <h1>Lorem Ipsum</h1>
-<h3>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."<br>
-    "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."</h3>
+<h3>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, <SUPER IMPORTANT TEXT THAT MUST BE KEPT> consectetur, adipisci velit..."<br>
+    "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..." Curabitur mattis ultricies odio</h3>
 <hr>
 <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam magna nulla, eleifend id iaculis eget, varius eu
@@ -11,7 +11,7 @@
 <p>
     Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam vehicula enim ut
     vestibulum ullamcorper. Nulla ac commodo tortor. Integer vulputate tellus arcu, vel egestas justo tincidunt eget.
-    Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut lacinia ac ligula in
+    Curabitur mattis ultricies odio Curabitur mattis ultricies odio Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. <SUPER IMPORTANT TEXT THAT MUST BE KEPT> Ut lacinia ac ligula in
     interdum. Suspendisse at nisl quis diam vehicula sagittis ac tincidunt mauris. Fusce efficitur in turpis ac porta.
     Aliquam condimentum, orci nec dignissim pellentesque, tortor lacus vestibulum tortor, vel pellentesque turpis diam
     sit amet mauris. In a elementum libero. Nam vulputate elementum tempor. Cras eleifend congue nisi, et aliquam nunc
@@ -19,20 +19,11 @@
     ornare mattis lorem nec malesuada. Maecenas elementum rutrum nisl id rutrum.
 </p>
 <p>
-    Morbi porta et sem a interdum. Pellentesque imperdiet lacus sed nulla hendrerit convallis. Mauris ullamcorper
-    egestas justo at molestie. Mauris tincidunt odio massa, et blandit odio tincidunt id. Nullam tincidunt dui sit amet
-    magna efficitur aliquet. Nunc ut lectus nec arcu porta ultricies eu non leo. Aliquam nec ultrices sem. Aliquam
-    eleifend, nunc in porttitor pharetra, tellus neque accumsan turpis, id viverra purus tellus vel nulla. Donec dictum
-    arcu sit amet augue auctor efficitur. Maecenas facilisis imperdiet turpis, a commodo tellus tempus eu. Praesent
-    sapien sem, efficitur sed justo eu, maximus consectetur odio. Maecenas quis velit odio. In id dapibus tellus. Nam
-    dignissim laoreet vestibulum. Maecenas lacinia blandit erat sit amet rhoncus.
-</p>
-<p>
     Curabitur mattis ultricies odio, in viverra ante consectetur vel. Mauris imperdiet orci vitae faucibus suscipit.
     Pellentesque vitae augue quis est rutrum placerat vestibulum ac tellus. Fusce finibus vel nibh nec rhoncus. Donec
-    accumsan at lacus porta ullamcorper. Vivamus mattis viverra lectus. Nam luctus lectus sit amet aliquam blandit.
+    accumsan at lacus porta ullamcorper. Vivamus mattis vived ante sed temporrra lectus. Nam luctus lectus sit amet aliquam blandit.
     Suspendisse ut nibh sed augue ullamcorper sodales in id leo. Sed interdum, quam at suscipit accumsan, elit urna
-    commodo felis, eget rutrum turpis orci ac tortor. Quisque quis nisl blandit, elementum sapien ac, vehicula tellus.
+    commodo felis, eget rutrum turpis orci ac tortor. Quid ante sed temporsque quis nisl blandit, elementum sapien ac, vehicula tellus.
     Vivamus pellentesque, leo et dignissim molestie, nisl orci facilisis risus, ac dapibus magna nisl nec diam. Mauris
     nec scelerisque elit. Morbi sollicitudin tortor nisl, id congue libero sagittis ac. Morbi sed tellus enim.
 </p>
