--- a/LoremIpsum.html
+++ b/LoremIpsum.html
@@ -1,6 +1,7 @@
 <h1>Lorem Ipsum</h1>
-<h3>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."<br>
-    "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."</h3>
+<p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."<br>
+    <p>"Proper Prior Planning and Preparation Prevents Piss Poor Performance</p>
+    "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."</p>
 <hr>
 <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam magna nulla, eleifend id iaculis eget, varius eu
